Improvements to the GUI

--- a/apps/vaporgui/BarbAppearanceGUI.ui
+++ b/apps/vaporgui/BarbAppearanceGUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>403</width>
-    <height>990</height>
+    <height>1096</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -53,10 +53,22 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <property name="spacing">
-      <number>0</number>
+      <number>-1</number>
      </property>
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
+     </property>
+     <property name="leftMargin">
+      <number>12</number>
+     </property>
+     <property name="topMargin">
+      <number>12</number>
+     </property>
+     <property name="rightMargin">
+      <number>12</number>
+     </property>
+     <property name="bottomMargin">
+      <number>12</number>
      </property>
      <item>
       <widget class="QTabWidget" name="tabWidget">
@@ -72,16 +84,16 @@
           <number>0</number>
          </property>
          <property name="leftMargin">
-          <number>0</number>
+          <number>12</number>
          </property>
          <property name="topMargin">
-          <number>0</number>
+          <number>12</number>
          </property>
          <property name="rightMargin">
-          <number>0</number>
+          <number>12</number>
          </property>
          <property name="bottomMargin">
-          <number>0</number>
+          <number>12</number>
          </property>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout">
@@ -205,10 +217,19 @@
           <widget class="QFrame" name="zDimFrame">
            <layout class="QHBoxLayout" name="zDimLayout">
             <property name="spacing">
-             <number>5</number>
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
             </property>
             <property name="bottomMargin">
-             <number>1</number>
+             <number>0</number>
             </property>
             <item>
              <widget class="QLabel" name="zDimLabel">
@@ -385,26 +406,12 @@
       </widget>
      </item>
      <item>
-      <widget class="Line" name="line_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="TFWidget" name="_TFWidget" native="true">
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>484</height>
+         <height>600</height>
         </size>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="Line" name="line">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
