--- a/apps/vaporgui/SettingsGUI.ui
+++ b/apps/vaporgui/SettingsGUI.ui
@@ -1076,6 +1076,13 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="_fontButton">
+     <property name="text">
+      <string>PushButton</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <property name="spacing">
       <number>0</number>
